; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_push_dropdown_item_playlist_label_display_mode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_push_dropdown_item_playlist_label_display_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_push_dropdown_item_playlist_label_display_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_push_dropdown_item_playlist_label_display_mode(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = call i32* (...) @playlist_get_cached()
  store i32* %12, i32** %11, align 8
  %13 = load i32*, i32** %11, align 8
  %14 = load i64, i64* %9, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i32 @playlist_set_label_display_mode(i32* %13, i32 %15)
  %17 = load i32*, i32** %11, align 8
  %18 = call i32 @playlist_write_file(i32* %17)
  %19 = call i32 @action_cancel_pop_default(i32* null, i32* null, i32 0, i32 0)
  ret i32 %19
}

declare dso_local i32* @playlist_get_cached(...) #1

declare dso_local i32 @playlist_set_label_display_mode(i32*, i32) #1

declare dso_local i32 @playlist_write_file(i32*) #1

declare dso_local i32 @action_cancel_pop_default(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
